# pi-screen-remote

./: .dockerignore  .drone.yml  Dockerfile  Makefile  README.md  logger.py  pyproject.toml  remote.py  remote_rf.py  requirements.txt  server.py
chart/pi-screen-remote/: Chart.yaml  values.yaml
chart/pi-screen-remote/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
chart/pi-screen-remote/templates/tests/: test-connection.yaml
