[tool.poetry]
name = "pi-screen-remote"
version = "0.1.0"
description = ""
authors = ["Raj Perera <rajiteh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "1.1.4"
waitress = "1.4.3"
Paste = "3.4.0"
rpi-rf = "0.9.7"
markupsafe = "2.0.1"
"RPi.GPIO" = "^0.7.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
